--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         </div>
 
-        <div id="portfolio">
+        <div id="portfolio" class="scroll-uxui">
             <h3 class="animate__animated animate__fadeIn">
                 Portfolio</h3>
             <div class="portfolio-contenedor">
@@ -69,7 +69,7 @@
                 </div>
             </div>
 
-            <div class="skills-contenedor" id="skills">
+            <div class="skills-contenedor scroll-uxui" id="skills" >
                 <h3 class="animate__animated animate__fadeIn">
                     Skills</h3>
                 <div class="skills">
@@ -125,7 +125,7 @@
                     class='bx bxl-github'></i></a>
             <a target="_blank" href="https://www.linkedin.com/in/lorenzo-caramaschi-desarrollador-fullstack/"
                 target="_blank"><i class='bx bxl-linkedin-square'></i></a>
-            <a target="_blank" href="mailto:caramaschilorenzo@gmail.com" target="_blank"><i
+            <a href="mailto:caramaschilorenzo@gmail.com" target="_blank"><i
                     class='bx bxl-gmail'></i></a>
         </div>
 
