--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding: 0;">
         <div class="container-fluid align-content-center bg-black justify-content-between">
-            <a href=""><img src="./img/cara lolo afeitada.png" class="navbar-brand" alt="Logo Lorenzo Caramaschi"></a>
+            <a href="#inicio"><img src="./img/cara lolo afeitada.png" class="navbar-brand" alt="Logo Lorenzo Caramaschi"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon bg-white" style="border-radius: 0.2rem; font-size: 1.5rem"></span>
@@ -35,7 +35,7 @@
     </nav>
 
     <main>
-        <div class="titulo-main">
+        <div class="titulo-main scroll-uxui" id="inicio">
             <h1 class="animate__animated animate__fadeIn">Lorenzo Caramaschi</h1>
             <h2 class="animate__animated animate__fadeIn">Front-End Developer Jr
             </h2>
